:bug: added BASE_NAME link

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <section class="hero is-link has-text-centered">
       <div class="hero-body">
         <h1 class="title is-1">
-          <a href="/">
+          <a href="{{ BASE_NAME }}">
             <i class="bi bi-emoji-kiss"></i>
             {{ self.title() }}
           </a>
