--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header_addition %}
-<a href="/">
+<a href="{{ BASE_NAME }}">
     <span class="icon">
         <i class="bi bi-house-door"></i>
     </span> All Recipes</a>
