:lipstick: changed design a little

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,10 +25,10 @@
 <body>
 
   <header class="header">
-    <section class="hero is-link has-text-centered">
+    <section class="hero has-background-grey-darker has-text-white-ter has-text-centered">
       <div class="hero-body">
         <h1 class="title is-1">
-          <a href="{{ BASE_NAME }}">
+          <a class="has-text-white-ter" href="{{ BASE_NAME }}">
             <i class="bi bi-emoji-kiss"></i>
             {{ self.title() }}
           </a>
