--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -69,7 +69,7 @@ recipe.recipe.cookware, recipe.recipe.steps %}
 </div>
 
 {% for step in steps %}
-<div class="notification is-link">
+<div class="notification has-background-grey-darker has-text-white-ter">
     <h4 class="title">
         Step {{ loop.index }}
     </h4>
